Set a maximum width for App container, fix project card overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 #root {
-  max-width: 1500px;
   text-align: center;
   min-height: 100vh;
+}
+
+.App {
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
 }
